--- a/_posts/2013-12-16-min.markdown
+++ b/_posts/2013-12-16-min.markdown
@@ -7,6 +7,8 @@ published: true
 
 
 <h3>U.S. Commercial Service Minneapolis</h3>
+<p style="float: left; margin: 0 0.833em 0.208em 0;"><img src="http://www.50states.com/flag/image/nunst037.gif" alt="africa coastline" width="125"  /></p>
+
 <p>The U.S. Commercial Service in Minnesota is your local federal government office with a global network that provides customized solutions enabling Minnesota companies to sell U.S. made products and services internationally</p>
 
 <p>Leverage our global network and proven trade expertise to meet your exporting needs. Whether you are looking to make your first export sale or expand to additional markets, we offer the experience and services you need to grow international sales of your U.S. made products and services. In addition to our core service offerings, we offer free consulting to companies.</p>
@@ -92,6 +94,20 @@ Fax us at: 612-348-1650</br>
   </div>
   
 </div>
+
+<div class="articles">
+<dl class="article">
+	<dd class="id"></dd>
+	<dt>Title</dt>
+    <dd class="title"></dd>
+    <dt>Publication Date</dt>
+    <dd class="pub_date"></dd>
+    <dt>Content</dt>
+    <dd class="content"></dd> 
+             
+</dl>
+</div>
+
 
 <table>
 <tr>
