--- a/_posts/2013-12-16-min.markdown
+++ b/_posts/2013-12-16-min.markdown
@@ -45,53 +45,8 @@ published: true
 
 <p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;">Healthcare Specialists from U.S. Embassies and Consulates around the world will be at the show and available for one-on-one meetings with U.S. companies exhibiting at and attending the show.</p>
 
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;">These Commercial Specialists are your U.S. representatives and business advocates in their host countries. They can discuss the current market situation, export issues important to your firm, and export opportunities in their respective markets. If you are already exporting, they are also available to work with you to find additional partners, new markets and/or increase your market share.</p>
 
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;"><strong>Countries participating in 2014:</strong></p>
-
-
-
-<div style="margin-left: 10pt;">
-
-<ul>
-<li style="margin-top: 0in; margin-bottom: 0pt;">Bahrain</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Egypt</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">India</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Jordan</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Kuwait</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Libya</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Oman</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Pakistan</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">Saudi Arabia</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">United Arab Emirates</li>
-
-<li style="margin-top: 0in; margin-bottom: 0pt;">West Bank</li>
-
-</ul>
-</div>
-
-
-
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;">*Please note the list of countries participating is subject to change.</p>
-
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;">Interviews will be in your booth or the International Trade Center located in the U.S. Pavilion (TBA).</p>
-
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;"><strong>Advance registration required:</strong> These appointments are available on a first-come, first-served basis and the schedule fills up quickly. Companies that wish to participate must register in advance through the U.S. Department of Commerce ShowTime Program. There is no fee for this service. The deadline to register is January 17, 2014.</p>
-
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;"><strong>To participate in these one-on-one meetings with in-country expertise, please complete the form below.</strong> We will then forward your completed company profile to our country/industry Commercial Specialists from the countries you select. Meetings are available from January 27-13, 2014.</p>
-
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;">If you cannot personally attend, please make sure your export and/or international department(s) is aware of this value-added service.</p>
-
-<p class="DefaultParagraph-1" style="font-family: Verdana; font-size: 12px; line-height: 16px; margin-left: 0pt; margin-top: 11px; margin-bottom: 11px;"><strong>For further information regarding Showtime appointments</strong>, please contact:<br>Andrea Berton at <a style="color: #5aa9e1; text-decoration: none;" href="mailto:Andrea.Berton@trade.gov">Andrea.Berton@trade.gov</a>, phone: (612) 348-1639 or Tanya Cole at <a style="color: #5aa9e1; text-decoration: none;" href="mailto:Tanya.Cole@trade.gov">Tanya.Cole@trade.gov</a>, phone: (631) 935-2388.</p>
+<p><a href="/tradegov/arabhealth.html">more…</a></p>
 
 </div>
 <!-- entry-content -->
@@ -148,6 +103,7 @@ published: true
 
 
   <div class="tabbertab" title="FAQs" >
+  	<p><strong>Frequently Asked Questions</strong></p>
 	<p><a>What's the difference between the Schedule B codes (for exports) and the Harmonized Tariff Schedule (HTS) codes (for imports)?</a></p>
 	<p><a>How can I locate importers, distributors, sales reps, etc. in an overseas market?</a></p>
 	<p><a>How can I find export financing?</a></p>
@@ -157,7 +113,7 @@ published: true
   </div>
   
     <div class="tabbertab" title="Office Locations">
-	<p> The Minneapolis Office of the U.S. Commercial Service is located at:</p>
+	<p> The <strong>Minneapolis Office of the U.S. Commercial Service</strong> is located at:</p>
  
 <p>100 North 6th Street</br>
 Suite 210-C, Butler Square Building</br>
@@ -194,31 +150,10 @@ Fax us at: 612-348-1650</br>
 <li>Opportunities to promote greater export activity at the local level by developing a trade assistance network.</li>
 
 </ul>
+<p><a href="/tradegov/council.html">more…</a></p>
 </div>
 
-<div> </div>
-
-<div>Through</div>
-
 <div>
-
-<ul>
-<li>Counseling of local businesses;</li>
-
-<li>Identifying export financing sources for businesses;</li>
-
-<li>Creating greater export awareness in their local business communities;</li>
-
-<li>Identifying issues that affect export trade and implementation of constructive suggestions or improvement;</li>
-
-<li>Supporting programs and services of US &amp; FCS domestic offices;</li>
-
-<li>Building local export assistance partnerships with other organizations; and</li>
-
-<li>Promoting international education at the community level</li>
-
-</ul>
-<p>Contact the <a href="http://exportassistance.com/">Minnesota District Export Council</a>.</p>
 
 </div>
 
