--- a/_posts/2013-12-16-min.markdown
+++ b/_posts/2013-12-16-min.markdown
@@ -33,7 +33,7 @@ published: true
 
 <td>
 <div class='hentry main'>
-<h1 class='entry-title'><a href="/community/users/useac-minnesota/posts/506-arab-health-convention-2014" rel="bookmark">Arab Health Convention 2014</a></h1>
+<h1 class='entry-title'><a href="/community/users/useac-minnesota/posts/506-arab-health-convention-2014" rel="bookmark"><a href="/tradegov/arab-health.html">Arab Health Convention 2014</a></a></h1>
 <div class='entry-content'>
 
 </div>
@@ -85,7 +85,7 @@ published: true
 </ul>
 			</p>
 				By organizing trade missions and educational seminars; providing matching or export counselling services at trade shows; and recruiting buyer delegations to U.S. trade shows, we help U.S. exporters expand global sales at trade events.
-				</br></br><a>Read More-></a>
+				</br></br><a>more…</a>
 			</br></br></br></br>
 			<h5><a href="#">Selling Software into Brazil</a></h5>
 			<p>Minneapolis, MN</br>12/4/2013 through 12/4/2013
@@ -128,7 +128,7 @@ Fax us at: 612-348-1650</br>
 </div>
 </br>
 <div class='hentry main'>
-<h1 class='entry-title'><a href="/community/users/useac-minnesota/posts/505-minnesota-district-export-council" rel="bookmark">Minnesota District Export Council</a></h1>
+<h1 class='entry-title'><a href="/community/users/useac-minnesota/posts/505-minnesota-district-export-council" rel="bookmark"><a href="/tradegov/council.html">Minnesota District Export Council</a></a></h1>
 <div class='entry-content'>
 
 </div>
